issue #10: footer section too close - fixed

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
-    padding: 0.3125rem 3.1875rem 0 2.5rem;
+    padding: 0.3125rem 8% 0 6%;
     @media (max-width: $screen-xs-max) {
       padding: 0;
       flex-direction: column;
@@ -66,7 +66,7 @@
     font-family: Montserrat, sans-serif;
     &:nth-child(2) {
       padding-right: 2.25rem;
-      @media (max-width: $screen-xs-max) {
+      @media (max-width: $screen-md-max) {
         padding: 0;
       }
     }
